pulled in the rest of my portfolio from original. Everything seems to be working well, minus some layout issues.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,15 +19,25 @@ html, body
     
 }
 
+#first-section {
+  background-color: black;
+}
 
 #second-section {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
+  margin-top: 8%;
+  width: 100%;
+  height: 130vh;
+  
 }
 
 #third-section {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -36,11 +46,13 @@ html, body
 }
 
 #fourth-section {
-  
+  width: 100%;
+  height: 100vh;
+  padding: 2%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  
+  background-color: #260033;
   position: relative;
  
   /* border: 2px solid red !important; */
